2003-11-15  Mark Kettenis  <kettenis@gnu.org>

	* sparc-linux-tdep.c (sparc32_linux_init_abi): Set long_double_bit
	to 64.

	* sparc-tdep.c (sparc32_register_names): Remove trailing comma.
	(sparc32_pseudo_register_names): New variable.
	(SPARC32_NUM_PSEUDO_REGS): New define.
	(sparc32_register_name): Add support for psuedo-registers.
	(sparc32_register_type): Add support double precision
	floating-point registers.
	(sparc32_pseudo_register_read, sparc32_pseudo_register_write): New
	functions.
	(sparc32_gdbarch_init): Set num_pseudo_regs, pseudo_register_read
	and pseudo_register_write.
	* sparc-tdep.h (sparc32_regnum): Add SPARC32_D0_REGNUM and
	SPARC32_D30_REGNUM.

	* sparc-linux-tdep.c (sparc32_linux_sigtramp_frame_cache): Fix.

2003-11-14  Mark Kettenis  <kettenis@gnu.org>

	* sparc-linux-tdep.c: Include "frame.h", "frame-base.h",
	"frame-unwind.h", "gdbcore.h", "regcache.h", "symtab.h",
	"trad-frame.h", "gdb_assert.h" and "gdb_string.h".
	(LINUX32_SIGTRAMP_INSN0, LINUX32_SIGTRAMP_INSN1,
	LINUX32_RT_SIGTRAMP_INSN0, LINUX32_RT_SIGTRAMP_INSN1): New
	defines.
	(sparc_linux_sigtramp_start): New function.
	(sparc32_linux_sigtramp_start): New function.
	(sparc32_linux_rt_sigtramp_start): New function.
	(sparc32_linux_pc_in_sigtramp): New function.
	(sparc32_linux_sigtramp_frame_cache): New function.
	(sparc32_linux_sigtramp_frame_this_id): New function.
	(sparc32_linux_sigtramp_frame_prev_register): New function.
	(sparc32_linux_sigtramp_frame_unwind): New variable.
	(sparc32_linux_sigtramp_frame_sniffer): New function.
	(sparc32_linux_init_abi): Set pc_in_sigtramp, Add
	sparc32_linux_sigtramp_frame_sniffer.

	* configure.in: Check for <machine/reg.h>.  Check for `struct reg'
	in <machine/reg.h>.
	* configure, config.in: Regenerate.

2003-11-07  Mark Kettenis  <kettenis@gnu.org>

	From Peter Schauer  <Peter.Schauer@Regent.E-Technik.TU-Muenchen.DE>:
	* sparc-tdep.c (sparc32_register_names): Fix typo.
	* sparc-sol2-tdep.c (sparc32_sol2_init_abi): Set pc_in_sigtramp.